[gd_scene load_steps=15 format=2]

[ext_resource path="res://hud/hud_menu.gd" type="Script" id=1]
[ext_resource path="res://themes/theme_u_main.tres" type="Theme" id=2]
[ext_resource path="res://gui/slectable_panel_container.gd" type="Script" id=3]
[ext_resource path="res://themes/panel_container/styleboxflat_panel_selected.tres" type="StyleBox" id=4]
[ext_resource path="res://themes/panel_container/styleboxflat_panel_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://themes/panel_container/styleboxflat_panel_base.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.305882, 0.309804, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 50
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.270588, 0.282353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 50
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.227451, 0.231373, 0.243137, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 50
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/banner.png-74e88a02fde8130f5f843aba121c4815.stex"

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.305882, 0.309804, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 50
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.266667, 0.270588, 0.282353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 50
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.227451, 0.231373, 0.243137, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.482353, 0.364706, 0.14902, 0.564706 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 50
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.396078 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/G_P_Logout_64px.png-96df486bc5e14ad2595297b93d598753.stex"

[node name="HudMenu" type="VBoxContainer"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 0.05
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1152.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ButtonContainerLeft" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 520.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectablePanelContainer" type="PanelContainer" parent="HBoxContainer/ButtonContainerLeft"]
margin_right = 259.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "todo replace with polygon button"
}
base_style = SubResource( 1 )
hover_style = SubResource( 2 )
slected_style = SubResource( 3 )

[node name="SelectablePanelContainer2" type="PanelContainer" parent="HBoxContainer/ButtonContainerLeft"]
margin_left = 260.0
margin_right = 520.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 3 )
base_style = ExtResource( 6 )
hover_style = ExtResource( 5 )
slected_style = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 524.0
margin_right = 628.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture = SubResource( 4 )
expand = true
stretch_mode = 6

[node name="ButtonContainerRight" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 632.0
margin_right = 1152.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="SelectablePanelContainer" type="PanelContainer" parent="HBoxContainer/ButtonContainerRight"]
margin_right = 259.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 3 )
base_style = ExtResource( 6 )
hover_style = ExtResource( 5 )
slected_style = ExtResource( 4 )

[node name="SelectablePanelContainerMenu" type="PanelContainer" parent="HBoxContainer/ButtonContainerRight"]
margin_left = 260.0
margin_right = 520.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "todo replace with polygone button"
}
base_style = SubResource( 5 )
hover_style = SubResource( 6 )
slected_style = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainerRight/SelectablePanelContainerMenu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 52.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ButtonContainerRight/SelectablePanelContainerMenu/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 45.0
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ButtonContainerRight/SelectablePanelContainerMenu/MarginContainer/HBoxContainer"]
margin_right = 246.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="PopupMenu" type="PopupMenu" parent="HBoxContainer/ButtonContainerRight/SelectablePanelContainerMenu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 10 )
items = [ "hud.hud_menu.back_main_menu", null, 0, false, false, 0, 0, null, "", false ]
